--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop fonL">
           <li class="iconLang onlyPc">
-            <div class="Simage-warpper" >
+            <div class="Simage-wrapper" >
               <img src="SON/img/langIcon.png" alt=""/>
             </div>
           </li>
