--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   </head>
   <body>
     <!--로딩 화면(SON)-->
-    <header  class="Sko">
+    <header class="Sko">
       <div class="Sko-box">
         <!-- 라인 로고 -->
         <h1 class="Sko-bbox">
           <a href="">
             <div class="image-wrapper">
-              <img class="logoImg" src="SON/img/icon-title-pc_1.png"alt=""/>
+              <img class="logoImg" src="SON/img/icon-title-pc_1.png" alt="" />
             </div>
           </a>
         </h1>
@@ -46,8 +46,8 @@
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop fonL">
           <li class="iconLang onlyPc">
-            <div class="Simage-warpper" >
-              <img src="SON/img/langIcon.png" alt=""/>
+            <div class="Simage-warpper">
+              <img src="SON/img/langIcon.png" alt="" />
             </div>
           </li>
           <li class="SiconLang onlySp"></li>
@@ -77,7 +77,7 @@
       </div>
     </header>
     <main>
-      <div  id="SmvTarget1" class="SmvArea">
+      <div id="SmvTarget1" class="SmvArea">
         <div class="SmvText">
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
@@ -88,7 +88,9 @@
             </div>
             <div class="SdownloadBtnList">
               <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
-              <div class="SdownloadBtn"><i class="ri-google-play-fill"></i></div>
+              <div class="SdownloadBtn">
+                <i class="ri-google-play-fill"></i>
+              </div>
               <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
             </div>
           </div>
