--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@
       </div>
       <section class="Pservice__category">
         <ul class="Pservice__category-buttonwrapper">
-          <button class="Pservice__cartegory-button Pall">All Product</button>
+          <button id="Pall" class="Pservice__cartegory-button">
+            All Product
+          </button>
           <button id="comu" class="Pservice__cartegory-button">
             커뮤니케이션
           </button>
@@ -311,7 +313,7 @@
         </ul>
 
         <div class="Pservice__card-wrapper">
-          <article class="Pservice__card comu">
+          <article class="Pservice__card comu Pall">
             <img src="img/service_img.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE</h2>
@@ -340,7 +342,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card comu">
+          <article class="Pservice__card comu Pall">
             <img src="img/service_img2.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">오픈챗</h2>
@@ -360,7 +362,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img3.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 망가</h2>
@@ -388,7 +390,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img4.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뮤직</h2>
@@ -417,7 +419,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img5.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 운세</h2>
@@ -446,7 +448,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img6.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레코즈</h2>
@@ -467,7 +469,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img7.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Charmmy</h2>
@@ -488,7 +490,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card life">
+          <article class="Pservice__card life Pall">
             <img src="img/service_img8.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 클럽</h2>
@@ -509,7 +511,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card life">
+          <article class="Pservice__card life Pall">
             <img src="img/service_img9.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 아르바이트</h2>
@@ -530,7 +532,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img10.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인프렌즈 스토어</h2>
@@ -551,7 +553,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img11.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 플라이어</h2>
@@ -572,7 +574,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img12.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 기프트</h2>
@@ -593,7 +595,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img13.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 증권</h2>
@@ -614,7 +616,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img14.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포켓 머니</h2>
@@ -635,7 +637,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img15.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 FX</h2>
@@ -656,7 +658,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img16.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE BITMAX</h2>
@@ -675,7 +677,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img17.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고</h2>
@@ -696,7 +698,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img18.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고 네트워크</h2>
@@ -717,7 +719,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img19.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Talk Head View</h2>
@@ -739,7 +741,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img20.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 세일즈 프로모션</h2>
@@ -760,7 +762,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img21.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 공식 계정</h2>
@@ -783,7 +785,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img22.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 AD</h2>
@@ -803,7 +805,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img23.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 프로모션 스티커</h2>
@@ -829,7 +831,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img24.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 미니 앱</h2>
@@ -848,7 +850,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img25.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 리서치</h2>
@@ -869,7 +871,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card news">
+          <article class="Pservice__card news Pall">
             <img src="img/service_img26.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뉴스</h2>
@@ -891,7 +893,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img27.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 셰프</h2>
@@ -915,7 +917,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img28.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블 2</h2>
@@ -941,7 +943,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img29.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포코포코</h2>
@@ -967,7 +969,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img30.jpeg" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레인저스</h2>
@@ -994,7 +996,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img31.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 디즈니 썸썸</h2>
@@ -1020,7 +1022,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img32.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE 포코팡 타운</h2>
@@ -1049,7 +1051,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img33.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인팝2</h2>
@@ -1078,7 +1080,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img34.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 퍼즐탄탄</h2>
@@ -1102,7 +1104,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img35.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블</h2>
@@ -1128,7 +1130,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img36.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 브라운팜</h2>
