--- a/SON/index.html
+++ b/SON/index.html
@@ -15,7 +15,7 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-   <!--로딩 화면(SON)-->
+    <!--로딩 화면(SON)-->
     <header class="Sko">
       <div class="Sko-box">
         <!-- 라인 로고 -->
@@ -129,7 +129,9 @@
             </div>
             <div class="SdownloadBtnList">
               <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
-              <div class="SdownloadBtn"><i class="ri-google-play-fill"></i></div>
+              <div class="SdownloadBtn">
+                <i class="ri-google-play-fill"></i>
+              </div>
               <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
             </div>
           </div>
@@ -137,6 +139,5 @@
         <img src="img/hero1.jpg" alt="" />
       </div>
     </main>
-
   </body>
 </html>
