--- a/index.html
+++ b/index.html
@@ -34,50 +34,23 @@
         <!-- 라인 로고 -->
         <h1 class="Sko-bbox">
           <a href="">
-            <div
-              class="image-wrapper"
-              style="
-                position: relative;
-                overflow: hidden;
-                display: inline-block;
-                width: 43px;
-                height: 16px;
-              "
-            >
-              <img
-                style="
-                  position: absolute;
-                  top: 0px;
-                  left: 0px;
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  object-position: center center;
-                  opacity: 1;
-                "
-                src="img/icon-title-pc_1.png"
-                alt=""
-              />
+            <div class="image-wrapper">
+              <img style="position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;object-fit: cover;object-position: center center;opacity: 1;"src="img/icon-title-pc_1.png"alt=""/>
             </div>
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
         <ul class="SheaderMenu onlyPc">
-          <li id="SclickFirstBtn">
-            <a href="">Life on LINE</a>
-          </li>
+          <li id="SclickFirstBtn"><a href="">Life on LINE</a></li>
           <li id="SclickSecondBtn"><a href="">커뮤니케이션 앱</a></li>
           <li id="SclickThirdBtn"><a href="">서비스</a></li>
-          <li
-            class="ScurrentLine"
-            style="left: 0px; width: 93px; transition: 0.2s ease-in-out"
-          ></li>
+          <li class="ScurrentLine"></li>
         </ul>
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop fonL">
           <li class="iconLang onlyPc">
-            <div class="Simage-wrapper" >
-              <img src="SON/img/langIcon.png" alt=""/>
+            <div class="Simage-wrapper">
+              <img src="SON/img/langIcon.png" alt="" />
             </div>
           </li>
           <li class="SiconLang onlySp"></li>
@@ -107,7 +80,7 @@
       </div>
     </header>
     <main>
-      <div class="SmvArea">
+      <div id="SmvTarget1" class="SmvArea">
         <div class="SmvText">
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
@@ -118,9 +91,7 @@
             </div>
             <div class="SdownloadBtnList">
               <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
-              <div class="SdownloadBtn">
-                <i class="ri-google-play-fill"></i>
-              </div>
+              <div class="SdownloadBtn"><i class="ri-google-play-fill"></i></div>
               <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
             </div>
           </div>
