--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
         <h1 class="Sko-bbox">
           <a href="">
             <div class="image-wrapper">
-              <img style="position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;object-fit: cover;object-position: center center;opacity: 1;"src="img/icon-title-pc_1.png"alt=""/>
+              <img
+                style="
+                  position: absolute;
+                  top: 0px;
+                  left: 0px;
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center center;
+                  opacity: 1;
+                "
+                src="img/icon-title-pc_1.png"
+                alt=""
+              />
             </div>
           </a>
         </h1>
@@ -91,12 +104,17 @@
             </div>
             <div class="SdownloadBtnList">
               <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
-              <div class="SdownloadBtn"><i class="ri-google-play-fill"></i></div>
+              <div class="SdownloadBtn">
+                <i class="ri-google-play-fill"></i>
+              </div>
               <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
             </div>
           </div>
         </div>
-        <img src="img/hero1.jpg" alt="" />
+        <div class="SmvImages">
+          <img src="SON/img/hero1.jpg" class="active" alt="" />
+          <img src="SON/img/hero2.jpg" alt="" />
+        </div>
       </div>
     </main>
     <!--섹션 2(LEE)-->
