--- a/LEE/index.html
+++ b/LEE/index.html
@@ -12,9 +12,16 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="communication.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="scrollNavWrap.css" />
     <script src="index.js" defer></script>
   </head>
   <body>
+    <section class="Lmain_screen">
+      <div class="LscrollNavWrap">
+        <span class="LscrollNav">Scroll</span>
+        <div class="LscrollLine"></div>
+      </div>
+    </section>
     <section id="LmainService">
       <div class="Lgrid">
         <span class="Ldot bottom">・</span>
