--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
             </div>
           </div>
         </div>
-        <img src="img/hero1.jpg" alt="" />
+        
+        <img id="heroimg" src="img/hero1.jpg" alt="" />
+        
       </div>
     </main>
     <!--섹션 2(LEE)-->
